--- a/triturados/templates/base.html
+++ b/triturados/templates/base.html
@@ -14,12 +14,10 @@
 
         <link rel="stylesheet" href="/media/css/style1.css">
         <link rel="stylesheet" href="/media/css/demo.css">
-     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
-     </script> 
-     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
-     </script> 
+       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/cupertino/jquery-ui.css" type="text/css" />
+    
         <script src="/media/js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="/admin/jsi18n/"></script>
+       <script src="/admin/jsi18n/"></script>
     </head>
     <body>
         <div class="container">
@@ -34,7 +32,8 @@
 
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/media/js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
+         </script>
         <script src="/media/js/plugins.js"></script>
         <script src="/media/js/main.js"></script>
     </body>
