--- a/triturados/templates/home/index.html
+++ b/triturados/templates/home/index.html
@@ -6,5 +6,18 @@
 	Home de gestion
 {% endblock description %}
 {% block content %}
-			<a href="pedido/nuevo">Crear Pedido</a><br>
+
+<section>
+
+</section>
+
+<section>
+
+</section>
+
+<section>
+
+</section>
+
+		
 {% endblock content %}
