--- a/triturados/media/css/custom-jquery-ui.css
+++ b/triturados/media/css/custom-jquery-ui.css
@@ -1,8 +1,97 @@
- html,body {
+@font-face {
+    font-family: 'BebasNeueRegular';
+    src: url('fonts/BebasNeue-webfont.eot');
+    src: url('fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/BebasNeue-webfont.woff') format('woff'),
+         url('fonts/BebasNeue-webfont.ttf') format('truetype'),
+         url('fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+/* CSS reset */
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
 	margin:0;
 	padding:0;
 }
+html,body {
+	margin:0;
+	padding:0;
+}
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+}
+fieldset,img { 
+	border:0;
+}
+address,caption,cite,code,dfn,th,var {
+	font-style:normal;
+	font-weight:normal;
+}
+ol,ul {
+	list-style:none;
+}
+caption,th {
+	text-align:left;
+}
+h1,h2,h3,h4,h5,h6 {
+	font-size:100%;
+	font-weight:normal;
+}
+q:before,q:after {
+	content:'';
+}
+abbr,acronym { border:0;
+}
+section, header{
+	display: block;
+}
+/* General Demo Style */
+body{
+	font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+	background: #e0e3ec url(../img/bgnoise_lg.jpg) repeat top left;
+	font-weight: 400;
+	font-size: 15px;
+	color: #393b40;
+	overflow-y: scroll;
+}
+
+header{
+
+	
+}
+
+nav{
+
+	background-color: #303030;
+	height: 60px;
+}
+
+ nav li{
+	display: inline-block;
+   
+     height: 44px;
+    padding: 16px 41px 0;
+}
+
+
+nav li:hover{
+	
+    background-color:  #C5BB00;
+}
+
+ nav li a{
+ 	  color:  #EEE;
+ 	  text-decoration: none;
+}
+
 
  #ui-datepicker-div{
-	font-size: 12.5px;
+	font-size: 0 auto;
+}
+
+.container
+{
+	margin: 0 auto;
+	width: 950px !important;
 }
