--- a/triturados/templates/base.html
+++ b/triturados/templates/base.html
@@ -13,23 +13,29 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="/media/css/style1.css">
-        <link rel="stylesheet" href="/media/css/demo.css">
        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/cupertino/jquery-ui.css" type="text/css" />
-    
+    <link rel="stylesheet" href="/media/css/custom-jquery-ui.css">
         <script src="/media/js/vendor/modernizr-2.6.2.min.js"></script>
        <script src="/admin/jsi18n/"></script>
     </head>
     <body>
         <div class="container">
-        <header>
-                <h1>Home</h1>
-                <p class="codrops-demos">
-                   
-                </p>
-            </header>
+       <header>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Quienes somos</a></li>
+            <li><a href="#">Nuestros Servicios</a></li>
+           <li><a href="#">Contactenos</a></li>
+        </ul>
+    </nav>
+</header>
 
         {% block content %}{% endblock content %}
 
+
+<footer>
+</footer>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
          <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
