pedidos despachos programacion

--- a/triturados/templates/base-privado.html
+++ b/triturados/templates/base-privado.html
@@ -14,7 +14,8 @@
 
         <link rel="stylesheet" href="/media/css/style1.css">
        <link rel="stylesheet" href="/media/libs/jquery-ui/css/cupertino/jquery-ui-1.9.2.custom.min.css" type="text/css" />
-    <link rel="stylesheet" href="/media/css/custom-jquery-ui.css">
+           <link rel="stylesheet" href="/media/css/custom-jquery-ui.css">
+    <link rel="stylesheet" href="/media/libs/css3-github-buttons/gh-buttons.css">
         <script src="/media/js/vendor/modernizr-2.6.2.min.js"></script>
        <script src="/admin/jsi18n/"></script>
     </head>
@@ -23,10 +24,10 @@
        <header>
     <nav>
         <ul>
-            <li><a href="">Pedidos</a></li>
-            <li><a href="">Programacion</a></li>
-            <li><a href="">Despachos</a></li>
-            <li><a href="">Reportes</a></li>
+            <li><a href="/pedidos">Pedidos</a></li>
+            <li><a href="/programacion">Programacion</a></li>
+            <li><a href="/despachos">Despachos</a></li>
+            <li><a href="/reportes">Reportes</a></li>
         </ul>
     </nav>
 </header>
