--- a/triturados/media/css/custom-jquery-ui.css
+++ b/triturados/media/css/custom-jquery-ui.css
@@ -92,8 +92,8 @@ nav li:hover{
 }
 
 .grid th, .grid td{
- 	  padding:  10px;
  	  text-align: center;
+ 	  padding:  10px;
  }	  
 
  #ui-datepicker-div{
@@ -105,6 +105,23 @@ nav li:hover{
 	margin: 0 auto;
 	width: 950px !important;
 }
+
+.form_head  {
+	padding: 12px 3px;
+    width: 716px;
+}
+
+   
+.form_head  li{
+	display: inline-block;
+	vertical-align: top;
+	margin: 2px 10px 0px;
+}
+
+.odd{
+	background: #DDDDDD;
+}
+
 .pq-grid-header-table{
 	display: none;
 }
