--- a/triturados/templates/base-privado.html
+++ b/triturados/templates/base-privado.html
@@ -25,7 +25,7 @@
     <nav>
         <ul>
             <li><a href="/pedidos">Pedidos</a></li>
-            <li><a href="/programacion">Programacion</a></li>
+            <li><a href="/programacion/planta/1">Programacion</a></li>
             <li><a href="/despachos">Despachos</a></li>
             <li><a href="/reportes">Reportes</a></li>
         </ul>
